css/phenogrid.css
#svgempty{
	font-size:1.2em;
	font-weight:bold;
	height: 60;
	width: 200;
}

#errmsg{
	padding-top: 30px;
	font-size:1.2em;
	/**font-weight:bold;*/
	stroke:#ea763b;
}

#gridline{
	fill: #ffffff;
	fill-opacity: 0;
	stroke: #e5e5e5;
	stroke-width: 1;
}

#globalview{
	fill: #ffffff;
	stroke: #000000;
	stroke-width: 2;
}
#header{
	margin-top:0px;
	padding-bottom:0px;
	margin-bottom: 0px;
}


#org_div {
    width:200px;
}
	    

#sorts span,
#org_sel,
#calc_sel{
	width:150px;
	font-size:9px;
}

#calc_sel{
	margin-top:-15px;
}

text.accent{
	

}

.row_accent,
.model_accent{
	stroke:#ea763b;
	stroke-width: 2;
	fill: #ffffff;
	fill-opacity: 0.05;
}

.scroll_text{
	font-size: 9px;
}
#prebl{
    clear:both;
    background-color: #9999FF;
    float:left;

}



.a_text{
	text-anchor:end;
	opacity: 1.0;
	font-size: 12px;

}

#scorelist{
	font-size:10px;
	fill: #0F473E;
}

#detail_text{
	font-size: 10px;
	padding: 8px;
	background-color: #f9d0bb;
	border: 1px solid #c5c5c5;
}

#stitle{
	margin-left:240px;
	font-size:18px;	
}

#s2title{
	margin-left:380px;
	font-size:18px;	
}

#svg_area{
	float:left;
	margin-top: -35px;
	height:500px !important;
}

#selectionrect{
	fill: grey;
	opacity: 0.5
}

.instruct{
	font-size:12px;
}

.tip{
	width: 80px;
	height:10px;
	font-size:12px;
	font-weight:bold;
}

#tip{  
   font-size: 13px;
   margin-left:-20px;
   stroke-width: 1px;
   stroke:#25349A;
}


#org_div {
    float: left;
}

#org_div div, #calc_div div{
	font-weight:bold;
}

#org_div span, #calc_div span{
   font-size:14px;
}

#calc_div {
	height:60px;
}

#calcs {
  margin-left:10px;
  font-size: 22px;
  color: #25349A;
  font-weight:bold;
}


#clabel, #olabel{
  font-weight:bold;
  margin-left:5px;
}

#organism , #calculation{
   margin-top: 5px; 
   margin-left: 5px;
}

#org_div div, #calc_div div {
	font-weight:bold;
}

#faq{
	margin-left:14px;
	font-weight:bold;
	font-size:16px;
	color:#FF9966;
}

#detail_content{
  z-index:500;
}

#slabel{
	font-size:14px;
	font-weight:bold;
	margin-left: -20px;
}

.faq{
	margin-top:-5px;
}




#logo {
	height:90px;
}

#sort_div {
margin-top: 0px;
margin-left: 55px;
}

#sortphenotypes{

	margin-left: 35px;
}

/** jQDialog styles */
.ui-dialog-titlebar {
  background-color:#253494;
  color:#FFFFFF;
}
.ui-dialog-content{
	font-size:11px;
	font-family: arial;
	color:#000000;	
}
.ui-dialog-content a{
	color: #253494;
}
.ui-dialog-buttonpane{
	background-color: #253494;
}
.ui-dialog-buttonset{
	background-color: #25349A;
}
.ui-dialog-osx {
    -webkit-border-radius: 0 0 8px 8px;
    border-radius: 0 0 8px 8px; 
	border-width: 3px;
	-moz-border-radius: 0 0 8px 8px;
}

#redtext, #bluetext, #greentext{
	fill: black;
}

#unmatchedlabel,
#unmatchedlabelhide{
	clear:both;
	font-weight: bold;
	color: rgb(68,162,147);
	margin-top: 5px;
	margin-left: 5px;
	margin-bottom:20px;
}
#unmatched a{
	margin-left:19px;
}

#unmatched {
	float:left;
	clear:both;
	font-size: 0.8em;
    margin-left: 10px;
    text-align: right;
	padding-bottom:30px;
	margin-top:10px;
}

#return,
#button {
	float:left;
	margin-top:15px;
	margin-left: -510px;
}

#phenogrid_controls {
    clear:both;
    float: left;
    width:400;
    background-color: #DDFFFF;
}

#svg_container {
    height:600;
    background-color: #FF99FF;
}


/* spinner code from http://tobiasahlin.com/spinkit */
#spinner {
    margin: 30px  auto;
    padding: 70px;
    width: 100%;
}

cube1, .cube2 {
  background-color: #333;
  width: 10px;
  height: 10px;
  position: absolute;
  top: 100;
  left: 300;
  
  -webkit-animation: cubemove 1.8s infinite ease-in-out;
  animation: cubemove 1.8s infinite ease-in-out;
}

.cube2 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

@-webkit-keyframes cubemove {
  25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
  50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
  75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
  100% { -webkit-transform: rotate(-360deg) }
}

@keyframes cubemove {
  25% { 
    transform: translateX(42px) rotate(-90deg) scale(0.5);
    -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
  } 50% { 
    transform: translateX(42px) translateY(42px) rotate(-179deg);
    -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
  } 50.1% { 
    transform: translateX(42px) translateY(42px) rotate(-180deg);
    -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
  } 75% { 
    transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
    -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
  } 100% { 
    transform: rotate(-360deg);
    -webkit-transform: rotate(-360deg);
  }
}

